MIFOS-4602 : Replacing cargo-maven2-plugin with t7mp maven plugin as container deployer during acceptance tests.
cargo-maven2-plugin is overriding the tomcat7 configuration which is resulting META/resources (servlet 3.0) resources
not being picked up and getting errors at tomcat startup