@@ -15,6 +15,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+
     <properties>
         <modules.root.dir>${basedir}/..</modules.root.dir>
         <cargo.install.directory>${basedir}/target/installs</cargo.install.directory>
@@ -42,101 +43,6 @@
     </properties>
 
     <profiles>
-        <profile>
-            <id>download-container</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <tomcat.home.directory>${cargo.install.directory}/${container.name}/apache-tomcat-${tomcat.version}/apache-tomcat-${tomcat.version}/</tomcat.home.directory>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>1.0.5</version>
-                        <configuration>
-                            <container>
-                                <zipUrlInstaller>
-                                    <url>${container.url}</url>
-                                    <installDir>${cargo.install.directory}/${container.name}</installDir>
-                                </zipUrlInstaller>
-                                <output>${java.io.tmpdir}/${user.name}-cargo/conf/logs/server-console.log</output>
-                            </container>
-                            <configuration>
-                                <home>${java.io.tmpdir}/${user.name}-cargo/conf</home>
-                                <properties>
-                                    <cargo.jvmargs>-Xms1024m -Xmx1024m -XX:MaxPermSize=128m</cargo.jvmargs>
-                                    <cargo.maven.skip>${maven.test.skip}</cargo.maven.skip>
-                                </properties>
-                            </configuration>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>local-container</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>1.0.5</version>
-                        <configuration>
-                            <container>
-                                <home>${tomcat.home.directory}</home>
-                            </container>
-                            <configuration>
-                                <type>standalone</type>
-                                <home>${tomcat.deploy.directory}</home>
-                            </configuration>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>tomcat7x</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <container.name>tomcat7x</container.name>
-                <container.url>${tomcat.container.url}</container.url>
-                <tomcat.version>7.0.8</tomcat.version>
-                <war.target>${tomcat.home.directory}/webapps</war.target>
-            </properties>
-            <build>
-                <plugins>
-                    <!-- copy customized configuration files to the application server -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>process-resources</phase>
-                                <configuration>
-                                    <skip>${maven.test.skip}</skip>
-                                    <tasks>
-                                        <copy todir="${tomcat.home.directory}/conf" overwrite="true">
-                                            <fileset dir="${basedir}/src/test/containers/${container.name}" />
-                                        </copy>
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
         <profile>
             <id>firefox</id>
             <activation>
@@ -166,30 +72,6 @@
                 <selenium.log.output>false</selenium.log.output>
                 <selenium.port>4445</selenium.port>
             </properties>
-        </profile>
-        <profile>
-            <id>continuous-integration</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <tomcat.container.url>file:///home/hudson/arc/apache-tomcat-${tomcat.version}.zip</tomcat.container.url>
-                <!-- leaving <acceptanceTest.groups.to.run> empty means to run everything -->
-                <acceptanceTest.groups.to.run></acceptanceTest.groups.to.run>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>properties-maven-plugin</artifactId>
-                        <version>1.0-alpha-1</version>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>sql-maven-plugin</artifactId>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
     </profiles>
     <dependencies>
@@ -388,9 +270,7 @@
                 <configuration>
                     <groups>${acceptanceTest.groups.to.run}</groups>
                     <excludedGroups>workInProgress</excludedGroups>
-                    <!--
-                        Skip the normal tests, we'll run them in the integration-test phase
-                    -->
+                    <!-- Skip the normal tests, we'll run them in the integration-test phase -->
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <skip>true</skip>
                     <systemProperties>
@@ -421,62 +301,39 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.cargo</groupId>
-                <artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.0</version>
+                <groupId>com.googlecode.t7mp</groupId>
+                <artifactId>maven-t7-plugin</artifactId>
+                <version>0.9.7-SNAPSHOT</version>
                 <executions>
-                    <execution>
-                        <id>install</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>install</goal>
-                        </goals>
-                    </execution>
                     <execution>
                         <id>start-container</id>
                         <phase>pre-integration-test</phase>
                         <goals>
-                            <goal>start</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop-container</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
+                            <goal>run</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <skip>${maven.test.skip}</skip>
-                    <wait>${cargo.wait}</wait>
-                    <container>
-                        <containerId>${container.name}</containerId>
-                        <log>${basedir}/target/logs/${container.name}.log</log>
-                        <output>${basedir}/target/logs/${container.name}.out</output>
-                        <timeout>600000</timeout>
-                        <systemProperties>
-                            <mifos.mode>acceptance</mifos.mode>
-                        </systemProperties>
-                    </container>
-                    <configuration>
-                        <properties>
-                            <cargo.servlet.port>${servlet.port}</cargo.servlet.port>
-                            <cargo.jboss.configuration>default</cargo.jboss.configuration>
-                            <cargo.rmi.port>1099</cargo.rmi.port>
-                        </properties>
-                        <deployables>
-                            <deployable>
-                                <groupId>org.mifos</groupId>
-                                <artifactId>mifos-war</artifactId>
-                                <type>war</type>
-                                <properties>
-                                    <context>mifos</context>
-                                </properties>
-                                <pingURL>http://localhost:${servlet.port}/mifos/ping.ftl</pingURL>
-                            </deployable>
-                        </deployables>
-                    </configuration>
+                    <tomcatHttpPort>8083</tomcatHttpPort>
+                    <tomcatShutdownPort>8005</tomcatShutdownPort>
+                    <tomcatShutdownCommand>SHUTDOWN</tomcatShutdownCommand>
+                    <tomcatVersion>7.0.6</tomcatVersion>
+                    <tomcatSetAwait>false</tomcatSetAwait>
+                    <lookInside>false</lookInside>
+                    <systemProperties>
+                        <systemProperty>
+                            <key>mifos.mode</key>
+                            <value>acceptance</value>
+                        </systemProperty>
+                    </systemProperties>
+                    <webapps>
+                        <webappArtifact>
+                            <groupId>org.mifos</groupId>
+                            <artifactId>mifos-war</artifactId>
+                            <version>1.9-SNAPSHOT</version>
+                            <contextPath>mifos</contextPath>
+                        </webappArtifact>
+                    </webapps>
                 </configuration>
             </plugin>
             <plugin>
